# litopis

./: .cursorrules  .env.example  .gitignore  Makefile  docker-compose.db.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init-ssl.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  passenger_wsgi.py
backend/app/api/: auth.py  deps.py  router.py  tools.py  ws.py
backend/app/core/: events.py  security.py
backend/app/models/: __init__.py  favorite.py  rating.py  tool.py  user.py
backend/app/schemas/: tool.py  user.py
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  cache.ts  client.ts  tokenStorage.ts  tools.ts
frontend/src/components/AddToolModal/: AddToolModal.tsx
frontend/src/components/ConfirmDialog/: ConfirmDialog.tsx
frontend/src/components/CountUp/: CountUp.tsx
frontend/src/components/ImportToolsModal/: ImportToolsModal.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/components/StarRating/: StarRating.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/data/: mockTools.ts
frontend/src/hooks/: useToolsWS.ts
frontend/src/pages/: ArsenalPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx  ToolDetailPage.tsx
frontend/src/types/: arsenal.ts
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
(+2 files in other folders)
